Fix extra spacing in changelog #1000

--- a/app/javascript/stylesheets/script_versions.css
+++ b/app/javascript/stylesheets/script_versions.css
@@ -19,3 +19,9 @@
 .version-changelog img {
   max-width: 100%;
 }
+.version-changelog p:first-child {
+  margin-top: 0;
+}
+.version-changelog p:last-child {
+  margin-bottom: 0;
+}
